k8s/base/0-code-namespace.yaml
#! 0-code-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: code
    labels:
        com.docker.compose.project: code
