k8s/base/matching-service-deployment.yaml
#! matching-service-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: matching-service
    namespace: code
    labels:
        com.docker.compose.project: code
        com.docker.compose.service: matching-service
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: code
            com.docker.compose.service: matching-service
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: code
                com.docker.compose.service: matching-service
                com.docker.compose.network.match-api-network: "true"
                com.docker.compose.network.match-db-network: "true"
                com.docker.compose.network.question-api-network: "true"
        spec:
            containers:
                - name: match-express
                  image: match-express
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - wget --no-verbose --tries=1 --spider http://localhost:9004/health || exit 1
                    periodSeconds: 30
                    initialDelaySeconds: 5
                    timeoutSeconds: 10
                    failureThreshold: 5
                  ports:
                    - name: matching-s-9004
                      containerPort: 9004
