k8s/base/match-db-expose.yaml
#! match-db-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: match-db
    namespace: code
    labels:
        com.docker.compose.project: code
        com.docker.compose.service: match-db
spec:
    selector:
        com.docker.compose.project: code
        com.docker.compose.service: match-db
    ports:
        - name: match-db-6379
          port: 6379
          targetPort: match-db-6379
