k8s/base/user-db-expose.yaml
#! user-db-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: user-db
    namespace: code
    labels:
        com.docker.compose.project: code
        com.docker.compose.service: user-db
spec:
    selector:
        com.docker.compose.project: code
        com.docker.compose.service: user-db
    ports:
        - name: user-db-5432
          port: 5432
          targetPort: user-db-5432
